--- a/Dog API/View/Base.lproj/Main.storyboard
+++ b/Dog API/View/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="6Gh-4d-isf" id="Ip2-ig-cyT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
