--- a/Dog API/View/Base.lproj/Main.storyboard
+++ b/Dog API/View/Base.lproj/Main.storyboard
@@ -15,16 +15,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Gh-4d-isf">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4QQ-hx-oS6">
                                 <rect key="frame" x="16" y="44" width="343" height="734"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Gh-4d-isf">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="734"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Gh-4d-isf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5Vx-mF-Y0W"/>
-                            <constraint firstItem="6Gh-4d-isf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="DJ4-yw-HfM"/>
-                            <constraint firstItem="6Gh-4d-isf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="G6I-l7-wNF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Gh-4d-isf" secondAttribute="trailing" constant="16" id="cd3-Yf-VCq"/>
+                            <constraint firstItem="4QQ-hx-oS6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="GkO-Pu-gzl"/>
+                            <constraint firstItem="4QQ-hx-oS6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="U9V-lI-YX2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4QQ-hx-oS6" secondAttribute="trailing" constant="16" id="aGG-vr-L6s"/>
+                            <constraint firstItem="4QQ-hx-oS6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aLY-6G-Ij9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
