--- a/Dog API/View/Base.lproj/Main.storyboard
+++ b/Dog API/View/Base.lproj/Main.storyboard
@@ -18,8 +18,11 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4QQ-hx-oS6">
                                 <rect key="frame" x="16" y="44" width="343" height="734"/>
                                 <subviews>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q2S-2u-N1f">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="216"/>
+                                    </pickerView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Gh-4d-isf">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="734"/>
+                                        <rect key="frame" x="0.0" y="216" width="343" height="518"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
@@ -38,6 +41,10 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <pickerView contentMode="scaleToFill" id="QMc-LU-NPr">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="216"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                </pickerView>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="137.4384236453202"/>
         </scene>
