Created a pickerView outlet and linked it to staryboard.

--- a/Dog API/View/Base.lproj/Main.storyboard
+++ b/Dog API/View/Base.lproj/Main.storyboard
@@ -41,6 +41,7 @@
                     </view>
                     <connections>
                         <outlet property="imageView" destination="6Gh-4d-isf" id="Ip2-ig-cyT"/>
+                        <outlet property="pickerView" destination="Q2S-2u-N1f" id="rTR-zv-fha"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
